changed tailing indicator to underlined line num -  fixed long line wrapping

--- a/stylesheets/view-tail-large-files.less
+++ b/stylesheets/view-tail-large-files.less
@@ -41,6 +41,10 @@
             text-align:right;
             margin-right:10px;
             display:    inline-block;
+            
+          }
+          .line-num.tail-hilite {
+            text-decoration: underline;
           }
           .line-text {
             white-space: pre; 
